Fixed display screnn overflow, deleted auto-completion

--- a/src/app/add-form/add-form.component.css
+++ b/src/app/add-form/add-form.component.css
@@ -1,7 +1,7 @@
 form{
-  position: relative;
+  position:absolute ;
   margin-top: 100px;
-  left:100px;
+  left:250px;
 }
 input{
 margin-bottom: 15px;
@@ -16,7 +16,7 @@ height: 30px;
   position: relative;
 }
 button{
-  position: absolute;
+  position:relative ;
   background-color: peachpuff;
   width: 200px;
   height: 30px;
